trying to calibrate footage

--- a/spinrate.ipynb
+++ b/spinrate.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 395,
+   "execution_count": 651,
    "metadata": {},
    "outputs": [
     {
@@ -11,7 +11,7 @@
        "0"
       ]
      },
-     "execution_count": 395,
+     "execution_count": 651,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -28,20 +28,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 396,
+   "execution_count": 652,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "119.88011988011988\n"
+      "59.94005994005994\n"
      ]
     }
    ],
    "source": [
     "#open video\n",
-    "cap = cv2.VideoCapture('/Users/danielrosenthal/Documents/EGR_314/1080_120_1000_trim.mp4')\n",
+    "cap = cv2.VideoCapture('/Users/danielrosenthal/Documents/EGR_314/1080_60_1000_trim.mp4')\n",
     "fps = cap.get(cv2.CAP_PROP_FPS) #get fps\n",
     "print(fps)\n",
     "if cap.isOpened() == False:\n",
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 397,
+   "execution_count": 653,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 398,
+   "execution_count": 654,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 399,
+   "execution_count": 655,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 400,
+   "execution_count": 656,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -95,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 401,
+   "execution_count": 657,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -112,20 +112,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 402,
+   "execution_count": 658,
    "metadata": {},
    "outputs": [],
    "source": [
     "#conversion factor, likely incorrect bc camera and setup need to be calibrated\n",
     "disc_length = 8.26 #disc length in inches\n",
-    "distance = 36 #distance of disc from camera, rough guess\n",
-    "\n",
-    "\n"
+    "distance = 36 #distance of disc from camera, rough guess"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 403,
+   "execution_count": 659,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -153,35 +151,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 404,
+   "execution_count": 660,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Blue spin rate: -3.119050934735971 rps\n",
-      "Blue spin rate: -3.7998611810740566 rps\n",
-      "Blue spin rate: -5.385334337589926 rps\n",
-      "Blue spin rate: -6.014143168897497 rps\n",
-      "Blue spin rate: -6.6917186786229825 rps\n",
-      "Blue spin rate: -5.677332991045561 rps\n",
-      "Blue spin rate: -4.347401672925941 rps\n",
-      "Blue spin rate: -1.9571736951858596 rps\n",
-      "Blue spin rate: 0.5373090019584356 rps\n",
-      "Blue spin rate: 2.027481902828896 rps\n",
-      "Blue spin rate: 2.6758943425024286 rps\n",
-      "Blue spin rate: 2.4746613290617736 rps\n",
-      "Blue spin rate: 1.1666772043904288 rps\n",
-      "Blue spin rate: 0.0 rps\n",
-      "Blue spin rate: -1.679137885171799 rps\n",
-      "Blue spin rate: -3.4657713328305215 rps\n",
-      "Blue spin rate: -4.825095768859289 rps\n",
-      "Blue spin rate: -5.926070237739054 rps\n",
-      "Blue spin rate: -6.845169903291197 rps\n",
-      "Blue spin rate: -6.4100985257015415 rps\n",
-      "Blue spin rate: -5.309822144829455 rps\n",
-      "Blue spin rate: -2.8061834903365543 rps\n"
+      "14.293314226296271\n",
+      "38.54604833828584\n",
+      "49.10070172978707\n",
+      "38.237670237710574\n",
+      "46.35594809192835\n",
+      "30.488593001284357\n",
+      "18.962223135286706\n",
+      "18.87475674915157\n",
+      "35.205978692879754\n",
+      "41.041830188530234\n",
+      "51.62335688635246\n",
+      "0.0\n"
      ]
     },
     {
@@ -191,8 +179,16 @@
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[1;32m/Users/danielrosenthal/Documents/GitHub/frolf/spinrate.ipynb Cell 10\u001b[0m in \u001b[0;36m<cell line: 1>\u001b[0;34m()\u001b[0m\n\u001b[1;32m    <a href='vscode-notebook-cell:/Users/danielrosenthal/Documents/GitHub/frolf/spinrate.ipynb#X12sZmlsZQ%3D%3D?line=104'>105</a>\u001b[0m \u001b[39mif\u001b[39;00m prev_blue_centers \u001b[39mand\u001b[39;00m prev_orange_centers:\n\u001b[1;32m    <a href='vscode-notebook-cell:/Users/danielrosenthal/Documents/GitHub/frolf/spinrate.ipynb#X12sZmlsZQ%3D%3D?line=105'>106</a>\u001b[0m     \u001b[39m# Calculate the change in the positions of the centers\u001b[39;00m\n\u001b[1;32m    <a href='vscode-notebook-cell:/Users/danielrosenthal/Documents/GitHub/frolf/spinrate.ipynb#X12sZmlsZQ%3D%3D?line=106'>107</a>\u001b[0m     delta_blue_centers \u001b[39m=\u001b[39m np\u001b[39m.\u001b[39marray(blue_centers) \u001b[39m-\u001b[39m np\u001b[39m.\u001b[39marray(prev_blue_centers)\n\u001b[0;32m--> <a href='vscode-notebook-cell:/Users/danielrosenthal/Documents/GitHub/frolf/spinrate.ipynb#X12sZmlsZQ%3D%3D?line=107'>108</a>\u001b[0m     delta_orange_centers \u001b[39m=\u001b[39m np\u001b[39m.\u001b[39;49marray(orange_centers) \u001b[39m-\u001b[39;49m np\u001b[39m.\u001b[39;49marray(prev_orange_centers)\n\u001b[1;32m    <a href='vscode-notebook-cell:/Users/danielrosenthal/Documents/GitHub/frolf/spinrate.ipynb#X12sZmlsZQ%3D%3D?line=109'>110</a>\u001b[0m     \u001b[39m# Calculate the angular velocity of the disc in radians per second\u001b[39;00m\n\u001b[1;32m    <a href='vscode-notebook-cell:/Users/danielrosenthal/Documents/GitHub/frolf/spinrate.ipynb#X12sZmlsZQ%3D%3D?line=110'>111</a>\u001b[0m     spin_rate_blue \u001b[39m=\u001b[39m np\u001b[39m.\u001b[39marctan2(delta_blue_centers[:,\u001b[39m1\u001b[39m], delta_blue_centers[:,\u001b[39m0\u001b[39m]) \u001b[39m/\u001b[39m time_interval\n",
+      "\u001b[1;32m/Users/danielrosenthal/Documents/GitHub/frolf/spinrate.ipynb Cell 10\u001b[0m in \u001b[0;36m<cell line: 1>\u001b[0;34m()\u001b[0m\n\u001b[1;32m    <a href='vscode-notebook-cell:/Users/danielrosenthal/Documents/GitHub/frolf/spinrate.ipynb#X12sZmlsZQ%3D%3D?line=111'>112</a>\u001b[0m \u001b[39m# Calculate the spin rate of the disc\u001b[39;00m\n\u001b[1;32m    <a href='vscode-notebook-cell:/Users/danielrosenthal/Documents/GitHub/frolf/spinrate.ipynb#X12sZmlsZQ%3D%3D?line=112'>113</a>\u001b[0m \u001b[39mif\u001b[39;00m prev_blue_centers \u001b[39mand\u001b[39;00m prev_orange_centers:\n\u001b[1;32m    <a href='vscode-notebook-cell:/Users/danielrosenthal/Documents/GitHub/frolf/spinrate.ipynb#X12sZmlsZQ%3D%3D?line=113'>114</a>\u001b[0m     \u001b[39m# Calculate the change in the positions of the centers\u001b[39;00m\n\u001b[0;32m--> <a href='vscode-notebook-cell:/Users/danielrosenthal/Documents/GitHub/frolf/spinrate.ipynb#X12sZmlsZQ%3D%3D?line=114'>115</a>\u001b[0m     delta_blue_centers \u001b[39m=\u001b[39m np\u001b[39m.\u001b[39;49marray(blue_centers) \u001b[39m-\u001b[39;49m np\u001b[39m.\u001b[39;49marray(prev_blue_centers)\n\u001b[1;32m    <a href='vscode-notebook-cell:/Users/danielrosenthal/Documents/GitHub/frolf/spinrate.ipynb#X12sZmlsZQ%3D%3D?line=115'>116</a>\u001b[0m     delta_orange_centers \u001b[39m=\u001b[39m np\u001b[39m.\u001b[39marray(orange_centers) \u001b[39m-\u001b[39m np\u001b[39m.\u001b[39marray(prev_orange_centers)\n\u001b[1;32m    <a href='vscode-notebook-cell:/Users/danielrosenthal/Documents/GitHub/frolf/spinrate.ipynb#X12sZmlsZQ%3D%3D?line=117'>118</a>\u001b[0m     \u001b[39m# Calculate the angular velocity of the disc in radians per second\u001b[39;00m\n",
       "\u001b[0;31mValueError\u001b[0m: operands could not be broadcast together with shapes (0,) (1,2) "
+     ]
+    },
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mThe Kernel crashed while executing code in the the current cell or a previous cell. Please review the code in the cell(s) to identify a possible cause of the failure. Click <a href='https://aka.ms/vscodeJupyterKernelCrash'>here</a> for more info. View Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
      ]
     }
    ],
@@ -223,8 +219,8 @@
     "    mask_orange = cv2.inRange(mask,orange_lower_bound,orange_upper_bound)\n",
     "    \n",
     "    yellow_contours, _ = cv2.findContours(mask_yellow, cv2.RETR_EXTERNAL, cv2.CHAIN_APPROX_SIMPLE)\n",
-    "    blue_contours, _ = cv2.findContours(mask_blue, cv2.RETR_TREE, cv2.CHAIN_APPROX_SIMPLE)\n",
-    "    orange_contours, _ = cv2.findContours(mask_orange,cv2.RETR_TREE,cv2.CHAIN_APPROX_SIMPLE)\n",
+    "    blue_contours, _ = cv2.findContours(mask_blue, cv2.RETR_EXTERNAL, cv2.CHAIN_APPROX_SIMPLE)\n",
+    "    orange_contours, _ = cv2.findContours(mask_orange,cv2.RETR_EXTERNAL,cv2.CHAIN_APPROX_SIMPLE)\n",
     "    \n",
     "    blue_contours = [cnt for cnt in blue_contours if cv2.contourArea(cnt) > threshold]\n",
     "    orange_contours = [cnt for cnt in orange_contours if cv2.contourArea(cnt) > threshold]\n",
@@ -247,8 +243,14 @@
     "            #print(longest_width)\n",
     "            rect_coordinates = np.append(rect_coordinates,[x,y,w,h])\n",
     "            cv2.rectangle(frame, (x, y), (x + w, y + h), (255,0,255),3)\n",
-    "                \n",
-    "    \n",
+    "        # yellow_centers = []\n",
+    "        # for cnt in yellow_contours:\n",
+    "        #     M = cv2.moments(cnt)\n",
+    "        #     cX = int(M[\"m10\"] / M[\"m00\"])\n",
+    "        #     cY = int(M[\"m01\"] / M[\"m00\"])\n",
+    "        #     yellow_centers.append([cX, cY])        \n",
+    "    # if yellow_centers:\n",
+    "        \n",
     "            \n",
     "    if longest_width > 0:\n",
     "        conversion_rate = disc_length / longest_width\n",
@@ -273,6 +275,7 @@
     "        vx_mph = vx * conversion_rate\n",
     "        vy_mph = vy * conversion_rate\n",
     "        velocity = np.linalg.norm([vx_mph, vy_mph])\n",
+    "        print(vx_mph)\n",
     "\n",
     "        # Display the velocity values on the output video\n",
     "        cv2.putText(frame, 'X Velocity: {:.2f} mph'.format(vx_mph), (10, 30), cv2.FONT_HERSHEY_SIMPLEX, 1, (255, 255, 255), 2)\n",
@@ -282,12 +285,13 @@
     "        # create a new dataframe with the new velocities\n",
     "        new_data = pd.DataFrame({'x_velocity': [vx_mph], 'y_velocity': [vy_mph]})\n",
     "\n",
-    "\n",
+    "    # print(np.average(vx_mph))\n",
     "# everything below here is trying to calculate spin rate\n",
     "\n",
     "    # Find the center of each contour\n",
     "    blue_centers = []\n",
     "    for cnt in blue_contours:\n",
+    "        \n",
     "        M = cv2.moments(cnt)\n",
     "        cX = int(M[\"m10\"] / M[\"m00\"])\n",
     "        cY = int(M[\"m01\"] / M[\"m00\"])\n",
@@ -322,7 +326,7 @@
     "        avg_rps_blue = avg_spin_rate_blue / (2*np.pi)\n",
     "        avg_rps_orange = avg_spin_rate_orange / (2*np.pi)\n",
     "        \n",
-    "        print(\"Blue spin rate:\", avg_rps_blue, \"rps\")\n",
+    "        # print(\"Blue spin rate:\", avg_rps_blue, \"rps\")\n",
     "        # print(\"Orange spin rate:\", avg_rps_orange, \"rps\")\n",
     "    \n",
     "    # Update the previous centers of the blue and orange quadrants\n",
@@ -373,23 +377,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "   x_velocity  y_velocity\n",
-      "0    0.000000    0.000000\n",
-      "0    0.000000  203.173699\n",
-      "0   13.802114   -6.210951\n",
-      "0   35.627050   -3.995557\n",
-      "0   25.516785   -4.819837\n",
-      "0   23.658484   -8.603085\n",
-      "0   24.382174  -12.468157\n",
-      "0   22.568404  -20.419033\n",
-      "0   22.233402  -28.504362\n",
-      "0   15.662784  -27.544896\n",
-      "0    9.374932  -28.124795\n",
-      "0   -1.152070  -28.225708\n",
-      "0   -2.214641  -18.270788\n",
-      "0   -3.282859   -9.848577\n",
-      "0   -2.819397   -6.766553\n",
-      "0    0.556679   -5.010112\n"
+      "Empty DataFrame\n",
+      "Columns: [x_velocity, y_velocity]\n",
+      "Index: []\n"
      ]
     }
    ],
